--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,6 +1,10 @@
 .footer {
   background: #000;
   padding: 20px;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  left: 0;
 
   &__content {
     &-logo {
