finished burger menu

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -46,15 +46,83 @@
   transition: all 0.2s;
 }
 
+.header__burgermenu {
+  content: "\6c";
+}
+
+.header__box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+}
+
+.header__burger-nav {
+  z-index: 101;
+  width: 300px;
+  position: absolute;
+  background-color: #fff;
+  padding: 23px 34px;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  transition: 0.4s;
+  gap: 15px;
+  padding-top: 80px;
+}
+.header__burger-nav-active {
+  z-index: 101;
+  width: 300px;
+  position: absolute;
+  background-color: #fff;
+  padding: 23px 34px;
+  top: 0;
+  left: 100%;
+  height: 100vh;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  transition: 0.4s;
+  gap: 15px;
+  padding-top: 80px;
+}
+
+.header__burger-nav-active a {
+  text-decoration: none;
+}
+
+.header__burger__info {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+}
+.header__burger-close {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: absolute;
+  top: 0;
+  gap: 80px;
+}
+.header__burger-nav a {
+  text-decoration: none;
+  padding: 5px 10px;
+  text-decoration: none;
+  color: #a7b0c2;
+  font-size: 16px;
+  letter-spacing: 0.03em;
+  font-weight: 700;
+  transition: all 0.2s;
+}
+
 @media (max-width: 768px) {
   .header-nav {
     flex-direction: column;
     gap: 10px;
   }
 
-  .header {
-    justify-content: center;
-    text-align: center;
+  .header-nav {
+    display: none;
   }
 
   .header-img,
