--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -51,10 +51,7 @@
 }
 
 .header__box {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 15px;
+  display: none; 
 }
 
 .header__burger-nav {
@@ -70,24 +67,6 @@
   transition: 0.4s;
   gap: 15px;
   padding-top: 80px;
-}
-.header__burger-nav-active {
-  z-index: 101;
-  width: 300px;
-  position: absolute;
-  background-color: #fff;
-  padding: 23px 34px;
-  top: 0;
-  left: 100%;
-  height: 100vh;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-  transition: 0.4s;
-  gap: 15px;
-  padding-top: 80px;
-}
-
-.header__burger-nav-active a {
-  text-decoration: none;
 }
 
 .header__burger__info {
@@ -115,7 +94,12 @@
   transition: all 0.2s;
 }
 
+.header__burger-nav-active {
+  display: none;
+}
+
 @media (max-width: 768px) {
+
   .header-nav {
     flex-direction: column;
     gap: 10px;
@@ -132,5 +116,31 @@
 
   .header-btn {
     align-self: center;
+  }
+
+  .header__burger-nav-active {
+    z-index: 101;
+    width: 300px;
+    position: absolute;
+    background-color: #fff;
+    padding: 23px 34px;
+    top: 0;
+    left: 100%;
+    height: 100vh;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    transition: 0.4s;
+    gap: 15px;
+    padding-top: 80px;
+  }
+  
+  .header__burger-nav-active a {
+    text-decoration: none;
+  }
+
+  .header__box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
   }
 }
